k8s_test_manifest/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: nginx-test
  labels:
    name: nginx-test
    environment: test
